# k8s-ML-pipeline

./: .gitignore  README.md
.github/workflows/: tests.yml
final_project/: README.md  load.js  pyproject.toml
final_project/.k8s/bases/: deployment-project.yaml  kustomization.yaml
final_project/.k8s/overlays/dev/: kustomization.yaml  patch-deployment-project.yaml
final_project/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
final_project/infra/: deployment-redis.yaml  namespace.yaml  service-prediction.yaml
final_project/src/: main.py
final_project/tests/: test_mlapi.py
lab1/: README.md  run.sh
lab1/lab1/: Dockerfile  pyproject.toml
lab1/lab1/src/: main.py
lab1/lab1/tests/: test_main.py  test_src.py
lab2/: run.sh
lab2/lab2/: Dockerfile  README.md  pyproject.toml  run.sh
lab2/lab2/src/: main.py
lab2/lab2/tests/: test_lab2.py
lab2/lab2/trainer/: model_pipeline.pkl
lab3/lab3/: README.md  run.sh
lab3/lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
lab3/lab3/src/: main.py  model_pipeline.pkl
lab4/: README.md
lab4/lab4/: Dockerfile  README.md  pyproject.toml
lab4/lab4/.k8s/bases/: deployment-lab4.yaml  kustomization.yaml
lab4/lab4/.k8s/overlays/dev/: kustomization.yaml  patch-deployment-lab4.yaml
lab4/lab4/infra/: deployment-pythonapi.yaml  service-redis.yaml
lab4/lab4/src/: docker-compose.yml  main.py
lab4/lab4/tests/: test_lab3.py
lab5/: Findings.md  load.js
(+4 files in other folders)
